# mmxxvi_straight_connect

./: .env.example  .gitignore  README.md  docker-compose.yaml  mcp.json  prompts.md  pyproject.toml
mcp/: requirements.txt  server.py  telegram.py  telegram_api.py  telegram_service.py
src/: chat.py  config.py  list_tools.py
